integrated MSAL 2.0 into Microsoft OAuth Provider

--- a/src/app/pages/client/integrations/oauth/add/oauth-procedure-ui/oauth-procedure-ui.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-procedure-ui/oauth-procedure-ui.component.html
@@ -1,6 +1,6 @@
 <div class="sign-in">
     <div class="sign-in-steps">
-        <h3>Sign in with Google</h3>
+        <h3>Sign in with {{provider}}</h3>
         <ul>
             <li [ngClass]="getClassForStep(1)">
                 <span>Start the google Signin process</span>
