--- a/src/app/pages/client/integrations/oauth/add/oauth-signin/oauth-signin.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-signin/oauth-signin.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <h2>Sign in with {{oauthName}}</h2>
-    <app-oauth-procedure-ui [activeStep]="1">
+    <app-oauth-procedure-ui [activeStep]="1" [provider]="oauthName">
         <div class="buttons">
             <button (click)="startOAuthProcess()">Take me to {{oauthName}}</button>
         </div>
