--- a/src/app/pages/presentations/presentation-request/presentation-request.component.html
+++ b/src/app/pages/presentations/presentation-request/presentation-request.component.html
@@ -3,22 +3,24 @@
         <img class="logo" src="assets/svg/wide_logo_gradient.svg" />
     </div>
     <h2>Credentials Presentation Request</h2>
-    <p class="align-justify"><b>{{presentationReq.verifier.name}}</b> is requesting you to present credentials from your <b>{{presentationReq.credential.description}}</b></p>
-    <p class="align-left">Here is what <b>{{presentationReq.verifier.name}}</b> are requesting:</p>
+    <p class="align-justify"><b>{{presentationConfig.rpName}}</b> is requesting you to present credentials</p>
+    <p class="align-left">Here is what <b>{{presentationConfig.rpName}}</b> are requesting:</p>
     <div class="credentials-panel">
         <ul class="credentials-header">
-            <li>Credential: {{presentationReq.credential.description}}</li>
-            <li>Type: {{presentationReq.credential.type}}</li>
+            <li>Credential: {{presentationConfig.credential.join(', ')}}</li>
         </ul>
         <div class="credential-enumeration decrypted-credentials">
-            <i class="mdi mdi-lock-open-check text-success"></i> Decrypted<span class="separator">:<app-tooltip message="{{presentationReq.verifier.name}} require these credentials to be decrypted"></app-tooltip></span> {{presentationReq.request.decrypted.join(', ')}}
+            <i class="mdi mdi-lock-open-check text-coral"></i> Decrypted<span class="separator">:<app-tooltip message="{{presentationConfig.rpName}} require these credentials to be decrypted and sent in Plain Text. Make sure you are happy to share this data with {{presentationConfig.rpName}}"></app-tooltip></span> {{presentationConfig.require.plainText.join(', ')}}
         </div>
         <div class="credential-enumeration encrypted-credentials">
-            <i class="mdi mdi-lock text-coral"></i> Encrypted<span class="separator">:<app-tooltip position="bottom" message="These credentials are only required in their encrypted form"></app-tooltip></span> {{presentationReq.request.encrypted.join(', ')}}
+            <i class="mdi mdi-lock text-coral"></i> Encrypted<span class="separator">:<app-tooltip position="bottom" message="These credentials are only required in their encrypted form. {{presentationConfig.rpName}} will be unable to know the contents."></app-tooltip></span> {{presentationConfig.require.proofOf.join(', ')}}
+        </div>
+        <div class="credential-enumeration predicate-credentials">
+            <i class="mdi mdi-function-variant text-coral"></i> Predicate<span class="separator">:<app-tooltip position="bottom" message="{{presentationConfig.rpName}} require proof that specific conditions are met, without disclosing the actual data. You will be required to decrypt these credentials but they will not be sent to {{presentationConfig.rpName}}"></app-tooltip></span> {{formatPredicates(presentationConfig.require.predicate).join(', ')}}
         </div>
     </div>
     <div class="buttons vertical">
-        <button [routerLink]="['/presentation/confirm']">Approve</button>
-        <a class="btn btn-lg">Reject</a>
+        <button [routerLink]="['/present/confirm']">Approve</button>
+        <a class="btn btn-lg" (click)="reject()">Reject</a>
     </div>
 </div>
