--- a/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.scss
+++ b/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.scss
@@ -49,3 +49,22 @@
 .buttons.vertical {
     flex-direction: column;
 }
+
+.processed-credential-details{
+    max-height: 600px;
+
+    .scrollable {
+        width: 100%;
+        max-height: 400px;
+        overflow: auto;
+        background: $light-beige;
+        padding: 10px;
+        border-radius: 10px;;
+
+        p {
+            text-align: left;
+        }
+    }
+
+    margin-bottom: 20px;
+}
