--- a/src/app/pages/presentations/begin-presentation/begin-presentation.component.html
+++ b/src/app/pages/presentations/begin-presentation/begin-presentation.component.html
@@ -7,9 +7,11 @@
             <img class="logo" src="assets/svg/wide_logo_gradient.svg" />
         </div>
         <h2>Credentials Presentation Request</h2>
+        <div class="logo-wrapper" *ngIf="presentationConfig.logoUri">
+            <img class="logo logo-rp" [src]="presentationConfig.logoUri" />
+        </div>
         <p><b>{{presentationConfig.rpName}}</b> is requesting you to present your
-            <b>{{presentationConfig.credential.join(', ')}}</b>
-            credential</p>
+            <b>{{presentationConfig.credential.join(', ')}}</b> credential </p>
         <p>Please connect your wallet associated with WIDE to proceed or click 'Get Started' to get on board.</p>
         <div class="buttons">
             <button (click)="connectWallet()">Connect wallet</button>
@@ -39,6 +41,16 @@
         </div>
         <div buttons>
             <button (click)="showMetaMaskConnectModal = false">Close</button>
+        </div>
+    </app-wide-modal>
+    <app-wide-modal [showModal]="showSetHistoryKeyModal">
+        <div content class="metamask-connect-modal">
+            <h3>Set up your History Key</h3>
+            <p>Click Setup Key below to generate a unique History Key derived from a message signature.</p>
+            <p>This will store the history of presentations on the blockchain, without disclosing your address.</p>
+        </div>
+        <div buttons>
+            <button (click)="setupHistoryKey()">Setup Key</button>
         </div>
     </app-wide-modal>
     <app-wide-modal [showModal]="showGettingStartedModal">
