--- a/src/app/pages/presentations/begin-presentation/begin-presentation.component.scss
+++ b/src/app/pages/presentations/begin-presentation/begin-presentation.component.scss
@@ -15,7 +15,11 @@
 
     .logo-wrapper {
         margin-top: 20px;
-        margin-bottom: 60px;
+        margin-bottom: 20px;
+
+        .logo-rp {
+            max-height: 80px;
+        }
     }
 }
 
