--- a/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.scss
+++ b/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.scss
@@ -16,7 +16,11 @@
 
     .logo-wrapper {
         margin-top: 20px;
-        margin-bottom: 60px;
+        margin-bottom: 20px;
+
+        .logo-rp {
+            max-height: 80px;
+        }
     }
 
     p.align-left {
