--- a/src/app/pages/client/getting-started/getting-started.component.html
+++ b/src/app/pages/client/getting-started/getting-started.component.html
@@ -8,7 +8,7 @@
                 A decentralised identity bridge between your skills and the opportunities available in Web3
             </div>
             <div class="buttons">
-                <button class="btn-white-outline" (click)="connect()">Connect Wallet</button>
+                <button class="btn-white-outline" (click)="connect()">Get Started</button>
             </div>
         </div>
         <div class="right-content">
