fixed hardcoded google in presentation screens updated get started procedure to bypass tos signup if the user is already signed in

--- a/src/app/pages/client/integrations/oauth/add/oauth-procedure-ui/oauth-procedure-ui.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-procedure-ui/oauth-procedure-ui.component.html
@@ -3,7 +3,7 @@
         <h3>Sign in with {{provider}}</h3>
         <ul>
             <li [ngClass]="getClassForStep(1)">
-                <span>Start the google Signin process</span>
+                <span>Start the {{provider}} sign in process</span>
             </li>
             <li [ngClass]="getClassForStep(1)">
                 <i class="spacer spacer-1"></i>
@@ -12,7 +12,7 @@
                 <i class="spacer spacer-4"></i>
             </li>
             <li [ngClass]="getClassForStep(2)">
-                <span>Sign in on Google</span>
+                <span>Sign in on {{provider}}</span>
             </li>
             <li [ngClass]="getClassForStep(2)">
                 <i class="spacer spacer-1"></i>
