--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,8 +123,8 @@ a.btn {
 }
 
 .btn-icon {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .btn-lg,
