--- a/src/app/pages/client/integrations/oauth/add/oauth-procedure-ui/oauth-procedure-ui.component.scss
+++ b/src/app/pages/client/integrations/oauth/add/oauth-procedure-ui/oauth-procedure-ui.component.scss
@@ -1,21 +1,29 @@
 @import '_imports';
 
 @keyframes lightUp {
-    0%, 100% { background: $grey-light; }
-    25% { background: $peach; }
-  }
+
+    0%,
+    100% {
+        background: $grey-light;
+    }
+
+    25% {
+        background: $peach;
+    }
+}
 
 .sign-in {
-    display: flex;
-    align-items: center;
     background: $white;
     border-radius: 15px;
     text-align: center;
     padding: 25px 25px 25px 25px;
-    justify-content: center;
 
     .sign-in-steps {
-
+        display: flex;
+        align-items: center;
+        width: 100%;
+        flex-direction: column;
+        
         ul {
             padding: 0;
             margin: 0;
@@ -23,22 +31,25 @@
 
             li {
                 margin-top: 15px;
+                text-align: left;
+
                 .spacer {
                     display: block;
                     width: 4px;
                     height: 4px;
                     background: $grey-light;
+                    margin-left: 7px;
                     border-radius: 50%;
-                    margin-left: auto;
-                    margin-right: auto;
-                    margin-top: 2px;
+                    margin-top: 4px;
                 }
 
                 &.completed {
                     span {
                         &:before {
                             content: url('/assets/svg/wide_green_tick.svg');
-                            margin-right: 5px;
+                            margin-right: 8px;
+                            top: 1px;
+                            position: relative;
                         }
                     }
 
@@ -47,8 +58,45 @@
                     }
                 }
 
+                &.pending {
+                    span {
+                        color: $grey-light;
+
+                        &:before {
+                            content: ' ';
+                            display: inline-block;
+                            width: 15px;
+                            height: 15px;
+                            border-radius: 100%;
+                            background: $white;
+                            margin-right: 8px;
+                            margin-left: 2px;
+                            box-sizing: border-box;
+                            border: 3px solid $grey-light;
+                            top: 1px;
+                            position: relative;
+                        }
+                    }
+                }
+
                 &.active {
-                    color: $peach;
+                    color: $black;
+                    font-weight: 600;
+
+                    span {
+                        &:before {
+                            content: ' ';
+                            display: inline-block;
+                            width: 15px;
+                            height: 15px;
+                            border-radius: 100%;
+                            background: $peach;
+                            margin-right: 8px;
+                            margin-left: 2px;
+                            top: 1px;
+                            position: relative;
+                        }
+                    }
 
                     .spacer {
                         animation: lightUp 1.5s infinite;
@@ -56,19 +104,19 @@
 
                     .spacer-1 {
                         animation-delay: 0s;
-                      }
-                      
-                      .spacer-2 {
+                    }
+
+                    .spacer-2 {
                         animation-delay: 0.25s;
-                      }
-                      
-                      .spacer-3 {
+                    }
+
+                    .spacer-3 {
                         animation-delay: 0.5s;
-                      }
-                      
-                      .spacer-4 {
+                    }
+
+                    .spacer-4 {
                         animation-delay: 0.75s;
-                      }
+                    }
                 }
             }
         }
