updated messages, added content for about and support

--- a/src/app/pages/client/about/about.component.html
+++ b/src/app/pages/client/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<h2>The WIDE Platform</h2>
+<p>WIDE brings together <a href="http://acurraent.com" target="_blank">UG (haftungsbeschränkt)</a>, a German innovation agency, the University of Malta and a technical expert in aim of creating a bridge for digital identities that will connect European trust frameworks with Web3. Today, students and recent graduates at the University of Malta already receive a digitally signed European Digital Credentials that can be uploaded to the Europass platform. However, such credentials do not empower holders to be part of the ‘new work’ paradigm. Decentralised Autonomous Organisations (DAOs) often value experience over university degrees — this may be due to the fact that even if DAOs are presented with such credentials, they cannot reliably verify their validity and applicability.</p>
+<p>Since Web3 entities are often curtailed to hiring based on degrees, students and recent graduates are at risk of leaving university with digital credentials that cannot readily be presented to such blockchain-powered communities. Web3 Identities for DAOs and Education (WIDE) addresses this gap for Web3-compatible attestations by bridging these credentials to your Ethereum address.</p>
+<h2>Motivation for the project</h2>
+<p>WIDE aims to address existing challenges in decentralised identity management, notably the issues of market fragmentation and low interoperability. Developed with an eye towards eIDAS 2.0 compliance, WIDE is designed to serve as an interface between conventional European identity systems systems and emerging Web3 technologies.</p>
+<h2>How it works</h2>
+<p>WIDE designed to store and manage user-encrypted claims and alleviates the user pain of handling credentials and data on edge devices. WIDE enables digital safekeeping of claims and their use in online-only scenarios for users of Web3 applications that have extensive integration with Web3. In short, users are enabled to use their EU credentials anywhere in Web3 and end the need for using email with Web3 identifiers in parallel.</p>
+<p>WIDE encompasses the following five main functionalities:</p>
+<ol>
+    <li>onboarding claims to WIDE by associating the claims with a Web3 identifier, encrypting the claims and storing it on the WIDE database;</li>
+    <li>claim integrity assurance on chain;</li>
+    <li>retrieving claims for user review;</li>
+    <li>user presentation of claims to relying parties;</li>
+    <li>claim integrity verification.</li>
+</ol>
