--- a/src/app/pages/client/support/support.component.html
+++ b/src/app/pages/client/support/support.component.html
@@ -1,1 +1,13 @@
-<p>support works!</p>
+<h2>Welcome to WIDE Support!</h2>
+
+<p>WIDE is an early stage prototype currently in development for the TrustChain Open Call 1 (OC1). Our team is dedicated to providing you with the best possible user experience, but please keep in mind that as we are in the early stages of development, encountering bugs or unexpected behaviour is very likely.</p>
+
+<p>When getting started you can use the following walkthrough as reference and guidance.</p>
+
+<div style="position: relative; padding-bottom: calc(56.40658554044381% + 41px); height: 0; width: 100%;"><iframe src="https://demo.arcade.software/dqUP8xv4FngvIs50ZJ1f?embed&show_copy_link=true" title="WIDE" frameborder="0" loading="lazy" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="clipboard-write" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;color-scheme: light;"></iframe></div>
+
+<p>If you encounter any issues while using WIDE, we're here to help! Please reach out to <a href="mailto:hi@wid3.org">hi&#64;wid3.org</a> for contacting our support team for assistance. Your feedback is incredibly valuable to us as we work to improve the software and create a more seamless experience for all users.</p>
+
+<p>In the event of any detailed questions or urgent concerns, please schedule a call using <a href="https://calendly.com/benedictvs" target="_blank">calendly.com/benedictvs</a>.</p>
+
+<p>Thank you for your patience and understanding as we continue to develop and refine WIDE. We appreciate your support and look forward to helping you resolve any issues you may encounter.</p>
