--- a/src/app/pages/client/add-credentials/add-credentials.component.html
+++ b/src/app/pages/client/add-credentials/add-credentials.component.html
@@ -9,8 +9,9 @@
             <i class="icon"><img width="44" src='assets/svg/Microsoft_logo.svg' alt="Github icon"/></i> 
             <span>Sign in with Microsoft</span>
         </div>
-        <div class="credential-pane disabled">
-
+        <div class="credential-pane disabled" [routerLink]="['/credentials/poap']" [queryParams]="{ type: 'poap' }">
+            <i class="icon"><img width="44" src='assets/svg/poap_logo.svg' alt="POAP icon"/></i> 
+            <span>Claim POAPs</span>
         </div>
         <div class="credential-pane disabled">
 
