--- a/src/app/pages/client/integrations/oauth/add/oauth-store/oauth-store.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-store/oauth-store.component.html
@@ -10,7 +10,7 @@
     </app-oauth-procedure-ui>
 </div>
 <app-wide-modal [showModal]="showDataDetailModal">
-    <div content class="google-credentials">
+    <div content class="oauth-credentials">
         <h3>Encrypted Data</h3>
         <p>This is the raw data that will be sent to WIDE</p>
         <div class="scrollable">
