--- a/src/app/pages/dev/kitchen-sink/kitchen-sink.component.html
+++ b/src/app/pages/dev/kitchen-sink/kitchen-sink.component.html
@@ -45,6 +45,7 @@
             <button (click)="buttonClick('default')">default</button>
             <button class="btn-sm" (click)="buttonClick('btn-sm')">btn-sm</button>
             <button class="btn-xs" (click)="buttonClick('btn-xs')">btn-xs</button>
+            <button class="btn-xss" (click)="buttonClick('btn-xss')">btn-xss</button>
         </div>
         <h2>Multi Button</h2>
         <div class="button-set">
