--- a/src/app/pages/client/main/main.component.scss
+++ b/src/app/pages/client/main/main.component.scss
@@ -15,7 +15,7 @@
             color: $grey-dark;
             display: flex;
             align-items: center;
-            height: 40px;
+            min-height: 40px;
 
             padding-left: 15px;
             padding-right: 15px;
@@ -73,6 +73,7 @@
 
                 .credential-property {
                     color: $black;
+                    border-bottom: 1px solid $light-coral;
                 }
             }
         }
