updated based on UM Feedback

--- a/src/app/pages/client/add-credentials/add-credentials.component.html
+++ b/src/app/pages/client/add-credentials/add-credentials.component.html
@@ -5,11 +5,11 @@
             <i class="icon"><img width="44" src='assets/svg/google_icon.svg' alt="Google icon"/></i> 
             <span>Sign in with Google</span>
         </div>
-        <div class="credential-pane disabled" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'microsoft' }">
+        <div class="credential-pane" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'microsoft' }">
             <i class="icon"><img width="44" src='assets/svg/Microsoft_logo.svg' alt="Github icon"/></i> 
             <span>Sign in with Microsoft</span>
         </div>
-        <div class="credential-pane disabled" [routerLink]="['/credentials/poap']" [queryParams]="{ type: 'poap' }">
+        <div class="credential-pane" [routerLink]="['/credentials/poap']" [queryParams]="{ type: 'poap' }">
             <i class="icon"><img width="44" src='assets/svg/poap_logo.svg' alt="POAP icon"/></i> 
             <span>Claim POAPs</span>
         </div>
