--- a/src/app/pages/client/getting-started/getting-started.component.scss
+++ b/src/app/pages/client/getting-started/getting-started.component.scss
@@ -72,5 +72,10 @@
             border-radius: 10px;
             background-color: $light-beige;
         }
+
+        .progress {
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
     }
 }
