--- a/src/app/pages/client/add-credentials/add-credentials.component.scss
+++ b/src/app/pages/client/add-credentials/add-credentials.component.scss
@@ -30,5 +30,9 @@
                 text-shadow: 1px 4px 12px $grey-light;
             }
         }
+
+        &.disabled {
+            display: none;
+        }
     }
 }
