--- a/src/app/pages/client/integrations/oauth/add/oauth-redirect/oauth-redirect.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-redirect/oauth-redirect.component.html
@@ -1,7 +1,8 @@
 <div *ngIf="getWeb3WalletService().isCheckingMetaMask()" class="content">
     <p class="info"> <i class="spinner mdi mdi-loading rotate-mdi"></i> Please wait while initialising MetaMask...</p>
 </div>
-<div *ngIf="!getWeb3WalletService().isConnectedToWallet() && !getWeb3WalletService().isCheckingMetaMask()" class="content">
+<div *ngIf="!getWeb3WalletService().isConnectedToWallet() && !getWeb3WalletService().isCheckingMetaMask()"
+    class="content">
     <p class="error"> <i class="mdi mdi-alert-circle-outline"></i>Please connect your wallet!</p>
 </div>
 <div class="content" *ngIf="getWeb3WalletService().isConnectedToWallet()">
@@ -9,20 +10,41 @@
     <app-oauth-procedure-ui [activeStep]="4" [provider]="oauthName">
         <div class="buttons">
             <button *ngIf="profile" (click)="encryptData()">Encrypt</button>
-            <button *ngIf="profile" class="btn-alt" (click)="toggleProfileDetailModal()">View Credentials</button>
+            <button *ngIf="profile" class="btn-alt" (click)="toggleProfileDetailModal()">Review Credentials</button>
         </div>
     </app-oauth-procedure-ui>
 </div>
 <app-wide-modal [showModal]="showProfileDetailModal">
-    <div content class="google-credentials">
-        <h3>Google Profile Data</h3>
-        <p>This is the raw data you received from by Google.</p>
+    <div content class="google-credentials raw" *ngIf="showProfileDetailModalRawData">
+        <h3>{{oauthName}} Profile Data</h3>
+        <p>This is the raw data you received from {{oauthName}}.</p>
         <p>WIDE does not have access to this data.</p>
         <div class="scrollable">
             <pre><p>{{profile | json}}</p></pre>
         </div>
     </div>
-    <div buttons>
+    <div content class="google-credentials" *ngIf="!showProfileDetailModalRawData">
+        <h3>{{oauthName}} Profile Data</h3>
+        <p>This is the data you received from {{oauthName}}.</p>
+        <p>WIDE does not have access to this data.</p>
+        <div class="scrollable">
+            <table>
+                <tr>
+                    <th>Property</th>
+                    <th>Value</th>
+                </tr>
+                <tr *ngFor="let prop of profile | keyvalue">
+                    <td>{{prop.key}}</td>
+                    <td>{{prop.value}}</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div buttons class="buttons">
+        <button class="btn-alt" (click)="showProfileDetailModalRawData = !showProfileDetailModalRawData">
+            <span *ngIf="showProfileDetailModalRawData">Show Data</span>
+            <span *ngIf="!showProfileDetailModalRawData">Show Raw</span>
+        </button>
         <button (click)="closeModal()">Close</button>
     </div>
 </app-wide-modal>
