--- a/src/app/pages/client/integrations/oauth/add/oauth-redirect/oauth-redirect.component.scss
+++ b/src/app/pages/client/integrations/oauth/add/oauth-redirect/oauth-redirect.component.scss
@@ -28,6 +28,14 @@
         }
     }
 
+    table {
+        width: 100%;
+
+        th, td {
+            text-align: left;
+        }
+    }
+
     margin-bottom: 20px;
 
 }
